--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -4,6 +4,7 @@
 
 // Variables
 @import "variables";
+@import "leaderboard";
 
 // Bootstrap
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
