--- a/resources/assets/sass/_leaderboard.scss
+++ b/resources/assets/sass/_leaderboard.scss
@@ -18,7 +18,7 @@
   right: 0;
   bottom: 0;
   z-index: -1;
-  background: linear-gradient(to bottom, #3c692f 0%, rgba(40, 126, 104, 0.65) 40%, #63aca2 100%);
+  background: linear-gradient(to bottom, #3c692f 0%, rgba(40, 126, 104, 0.8) 80%, rgba(73, 143, 126, 0.75) 100%)
 }
 
 .et_pb_section {
@@ -49,6 +49,9 @@
 }
 
 #leaderboard_bars {
+  text-shadow: 0px 2px 3px rgba(0, 0, 0, 0.8);
+  font-size: 1.3em;
+  font-weight: bolder;
   .progress {
     overflow: hidden;
     height: 30px;
@@ -56,11 +59,15 @@
     background-color: #f5f5f5;
     border-radius: 4px;
     box-shadow: 0px 3px 2px 1px rgba(0, 0, 0, 0.2);
-    line-height: 2;
+    line-height: 1.7;
   .progress-bar {
-    line-height: 2.5;
+    padding: 0 1px;
+    line-height: 1.9;
     background-color: rgba(116, 188, 68, 0.75);
-    min-width: 3%;
+    min-width: 3.5%;
+    font-size: .8em;
+    color: #ffd900;
+    text-shadow: 0px 2px 2px rgba(32, 23, 104, 0.8);
     }
   }
 }
