--- a/resources/assets/sass/_leaderboard.scss
+++ b/resources/assets/sass/_leaderboard.scss
@@ -82,7 +82,7 @@ $progress-bar-bg-color: rgba(116, 188, 68, 0.75);
       min-width: 3.5%;
       font-size: .8em;
       color: #2a4a60;
-      text-shadow: 0px 1px 1px rgba(32, 23, 104, 0.8);  
+      text-shadow: 0px 1px 1px rgba(32, 23, 104, 0.8);
 
       // this adds a white chevron sticking into the green pogress bar
       // &:after {
@@ -110,6 +110,15 @@ $progress-bar-bg-color: rgba(116, 188, 68, 0.75);
     height: 2em;
     border-radius: 15px;
   }
+}
+
+.progress-bar-img img {
+  position: relative;
+  top: 28px;
+  right: 28px;
+  text-align: left;
+  height: 1.4em;
+  border-radius: 15px;
 }
 //
 // .box{
