--- a/resources/assets/sass/_leaderboard.scss
+++ b/resources/assets/sass/_leaderboard.scss
@@ -1,14 +1,17 @@
+body {
+  height: 100vh;
+  font-size: 3em!important;
+  background-color: #f5f8fa;
+  text-shadow: 0px 3px 2px rgb(30, 48, 10);
+}
+
+h2{
+}
 // $progress-bar-bg-color: blue;
 $progress-bar-bg-color: rgba(116, 188, 68, 0.75);
 
 .blue-green-overlay:before {
   content: ' ';
-  background: #04a8d5;
-  background: -moz-linear-gradient(top, #04a8d5 0%, #04a8d5 40%, #04cbd5 100%);
-  background: -webkit-gradient(left top, left bottom, color-stop(0%, #04a8d5), color-stop(40%, #04a8d5), color-stop(100%, #04cbd5));
-  background: -webkit-linear-gradient(top, #04a8d5 0%, #04a8d5 40%, #04cbd5 100%);
-  background: -o-linear-gradient(top, #04a8d5 0%, #04a8d5 40%, #04cbd5 100%);
-  background: -ms-linear-gradient(top, #04a8d5 0%, #04a8d5 40%, #04cbd5 100%);
   background: linear-gradient(to bottom, #04a8d5 0%, #04a8d5 40%, #04cbd5 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#04a8d5', endColorstr='#04cbd5', GradientType=0 );
   position: absolute;
@@ -18,6 +21,7 @@ $progress-bar-bg-color: rgba(116, 188, 68, 0.75);
   bottom: 0;
   z-index: -1;
   background: linear-gradient(to bottom, #3c692f 0%, rgba(40, 126, 104, 0.8) 80%, rgba(73, 143, 126, 0.75) 100%);
+  background:linear-gradient(to bottom, #e57f0e 0%, rgba(180, 111, 7, 0.8) 80%, rgba(122, 88, 1, 0.75) 100%);
   background: linear-gradient(to bottom, #3c692f 0%, rgba(89, 126, 40, 0.8) 80%, rgba(104, 143, 73, 0.75) 100%);
 }
 
@@ -56,9 +60,18 @@ $progress-bar-bg-color: rgba(116, 188, 68, 0.75);
 #leaderboard_title_bar {
   padding-bottom: 2em;
   padding-top: 2em;
+  height: 260px;
   h2 {
     color: #d8e2e6;
     text-shadow: 0px 3px 3px rgba(0, 0, 0, 0.5);
+    font-size: 60px;
+    font-weight: 900;
+  }
+  .pull-right {
+    margin-right: 80px;
+  }
+  img {
+    // margin-right: 10px;
   }
 }
 
@@ -69,7 +82,7 @@ $progress-bar-bg-color: rgba(116, 188, 68, 0.75);
   .progress {
     overflow: hidden;
     height: 30px;
-    // margin-bottom: 22px;
+    margin-bottom: 0;
     background-color: #f5f5f5;
     border-radius: 4px;
     box-shadow: 0px 3px 2px 1px rgba(0, 0, 0, 0.2);
@@ -103,12 +116,14 @@ $progress-bar-bg-color: rgba(116, 188, 68, 0.75);
 #leaderboard_table {
   color: #d8e2e6;
   box-shadow: 0px 8px 5px 3px rgba(0, 0, 0, 0.25);
-  border: 3px solid;
+  border: 6px solid;
   font-weight: 900;
-    border-radius: 6px;
+  font-weight: 900;
+  border-radius: 45px;
   .pic img {
+    border-radius: 30px;
     height: 2em;
-    border-radius: 15px;
+    box-shadow: 0px 6px 10px #555;
   }
 }
 
@@ -141,3 +156,6 @@ $progress-bar-bg-color: rgba(116, 188, 68, 0.75);
 //       border-radius: 3px;
 //     }
 // 	}
+.container {
+    width: 1870px!important;
+}
