--- a/resources/assets/sass/_leaderboard.scss
+++ b/resources/assets/sass/_leaderboard.scss
@@ -1,18 +1,28 @@
 body {
   height: 100vh;
-  font-size: 3em!important;
+  font-size: 2em!important;
   background-color: #f5f8fa;
   text-shadow: 0px 3px 2px rgb(30, 48, 10);
 }
 
-h2{
+.container {
+  width: 1600px!important;
 }
+
+h2 {
+  // font-size: 72px;
+  background: -webkit-linear-gradient(#ffffff, #afafaf);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color:rgba(68, 177, 188, 0.58); // light blue
+  -webkit-text-fill-color: rgba(116, 188, 68, 0.37);
+  font-size: 3.6em!important;
+}
+
 // $progress-bar-bg-color: blue;
 $progress-bar-bg-color: rgba(116, 188, 68, 0.75);
 
 .blue-green-overlay:before {
   content: ' ';
-  background: linear-gradient(to bottom, #04a8d5 0%, #04a8d5 40%, #04cbd5 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#04a8d5', endColorstr='#04cbd5', GradientType=0 );
   position: absolute;
   top: 0;
@@ -20,9 +30,10 @@ $progress-bar-bg-color: rgba(116, 188, 68, 0.75);
   right: 0;
   bottom: 0;
   z-index: -1;
-  background: linear-gradient(to bottom, #3c692f 0%, rgba(40, 126, 104, 0.8) 80%, rgba(73, 143, 126, 0.75) 100%);
-  background:linear-gradient(to bottom, #e57f0e 0%, rgba(180, 111, 7, 0.8) 80%, rgba(122, 88, 1, 0.75) 100%);
-  background: linear-gradient(to bottom, #3c692f 0%, rgba(89, 126, 40, 0.8) 80%, rgba(104, 143, 73, 0.75) 100%);
+  background: linear-gradient(to bottom, #04a8d5 0%, #04a8d5 40%, #04cbd5 100%);
+  // background: linear-gradient(to bottom, #3c692f 0%, rgba(40, 126, 104, 0.8) 80%, rgba(73, 143, 126, 0.75) 100%);
+  // background:linear-gradient(to bottom, #e57f0e 0%, rgba(180, 111, 7, 0.8) 80%, rgba(122, 88, 1, 0.75) 100%);
+  // background: linear-gradient(to bottom, #3c692f 0%, rgba(89, 126, 40, 0.8) 80%, rgba(104, 143, 73, 0.75) 100%);
 }
 
 .et_pb_section {
@@ -63,15 +74,16 @@ $progress-bar-bg-color: rgba(116, 188, 68, 0.75);
   height: 260px;
   h2 {
     color: #d8e2e6;
-    text-shadow: 0px 3px 3px rgba(0, 0, 0, 0.5);
+    // text-shadow: 0px 3px 3px rgba(0, 0, 0, 0.5) // replaced by 3d text effect below
     font-size: 60px;
     font-weight: 900;
+    text-shadow: #bbbbbb 0px 1px 0px, #b5b5b5 0px 2px 0px, #9c9b9b 0px 3px 0px, #888787 0px 4px 0px, #5d5c5c 0px 5px 0px, #3a3939 0px 6px 0px, rgba(0, 0, 0, 0.55) 0px 7px 1px, rgba(0, 0, 0, 0.296875) 0px 8px 6px;
   }
   .pull-right {
-    margin-right: 80px;
+    // margin-right: 80px;
   }
   img {
-    // margin-right: 10px;
+    margin-left: -20px;
   }
 }
 
@@ -123,7 +135,7 @@ $progress-bar-bg-color: rgba(116, 188, 68, 0.75);
   .pic img {
     border-radius: 30px;
     height: 2em;
-    box-shadow: 0px 6px 10px #555;
+    box-shadow: 0px 4px 6px #555;
   }
 }
 
@@ -134,28 +146,4 @@ $progress-bar-bg-color: rgba(116, 188, 68, 0.75);
   text-align: left;
   height: 1.4em;
   border-radius: 15px;
-}
-//
-// .box{
-//     margin: auto;
-// 	  background: #eee;
-// 	  border: 3px solid transparent;
-// 	  // -moz-border-image: -moz-linear-gradient(top left, #3acfd5 0%, #3a4ed5 100%);
-// 	  // -webkit-border-image: -webkit-linear-gradient(top left, #3acfd5 0%, #3a4ed5 100%);
-// 	  // border-image: linear-gradient(to bottom right, #3acfd5 0%, #3a4ed5 100%);
-//     border-image: linear-gradient(to bottom right, #f6e6b4 0%,#ed9017 100%);
-//     position: relative;
-// 	  border-image-slice: 1;
-//     &::after {
-//       position: fixed;
-//       top: -4px; bottom: -4px;
-//       left: -4px; right: -4px;
-//       background: linear-gradient(red, blue);
-//       content: '';
-//       z-index: -1;
-//       border-radius: 3px;
-//     }
-// 	}
-.container {
-    width: 1870px!important;
 }
