--- a/resources/assets/sass/_leaderboard.scss
+++ b/resources/assets/sass/_leaderboard.scss
@@ -23,9 +23,9 @@ $progress-bar-bg-color: rgba(193, 163, 20, 0.8);
   bottom: 0;
   z-index: -1;
   background: linear-gradient(to bottom, #04a8d5 0%, #04a8d5 40%, #04cbd5 100%);
-  // background: linear-gradient(to bottom, #3c692f 0%, rgba(40, 126, 104, 0.8) 80%, rgba(73, 143, 126, 0.75) 100%);
-  // background:linear-gradient(to bottom, #e57f0e 0%, rgba(180, 111, 7, 0.8) 80%, rgba(122, 88, 1, 0.75) 100%);
-  // background: linear-gradient(to bottom, #3c692f 0%, rgba(89, 126, 40, 0.8) 80%, rgba(104, 143, 73, 0.75) 100%);
+  background: linear-gradient(to bottom, #3c692f 0%, rgba(40, 126, 104, 0.8) 80%, rgba(73, 143, 126, 0.75) 100%);
+  background:linear-gradient(to bottom, #e57f0e 0%, rgba(180, 111, 7, 0.8) 80%, rgba(122, 88, 1, 0.75) 100%);
+  background: linear-gradient(to bottom, #3c692f 0%, rgba(89, 126, 40, 0.8) 80%, rgba(104, 143, 73, 0.75) 100%);
 }
 
 .et_pb_section {
@@ -62,14 +62,15 @@ $progress-bar-bg-color: rgba(193, 163, 20, 0.8);
 }
 
 #leaderboard_title_bar {
-  padding-bottom: 2em;
   padding-top: 2em;
-  height: 260px;
   h2 {
     // text-shadow: 0px 3px 3px rgba(0, 0, 0, 0.5) // replaced by 3d text effect below
     color: rgba(0, 20, 34, 0.62);
     background: -webkit-linear-gradient(#ffffff, #afafaf);
     background: -webkit-linear-gradient(#336b8a, #04cad5);
+    color: rgba(255, 255, 255, 0.51);
+    background: -webkit-linear-gradient(#ffffff, #afafaf);
+    background: -webkit-linear-gradient(#d1d3d4, #426e33);
     -webkit-background-clip: text;
     font-size: 3.6em!important;
     font-weight: 900;
@@ -91,7 +92,7 @@ $progress-bar-bg-color: rgba(193, 163, 20, 0.8);
   .progress {
     overflow: hidden;
     height: 30px;
-    margin-bottom: 0;
+    margin-bottom: -5px;
     background-color: #f5f5f5;
     border-radius: 4px;
     box-shadow: 0px 3px 2px 1px rgba(0, 0, 0, 0.2);
@@ -122,6 +123,11 @@ $progress-bar-bg-color: rgba(193, 163, 20, 0.8);
   }
 }
 
+#tables {
+  margin-top: 200px;
+  display: none;
+}
+
 .leaderboard_table {
   margin-top: 50px;
   color: #d8e2e6;
@@ -139,9 +145,10 @@ $progress-bar-bg-color: rgba(193, 163, 20, 0.8);
 
 .progress-bar-img img {
   position: relative;
-  top: 35px;
+  top: 34px;
   right: 45px;
   text-align: left;
   height: 1.4em;
-  border-radius: 15px;
+  border-radius: 22px;
+  box-shadow: 0px 4px 6px #555;
 }
