--- a/resources/assets/sass/_leaderboard.scss
+++ b/resources/assets/sass/_leaderboard.scss
@@ -75,9 +75,11 @@ $progress-bar-bg-color: rgba(193, 163, 20, 0.8);
     text-shadow: #bbbbbb 0px 1px 0px, #b5b5b5 0px 2px 0px, #9c9b9b 0px 3px 0px, #888787 0px 4px 0px, #5d5c5c 0px 5px 0px, #3a3939 0px 6px 0px, rgba(0, 0, 0, 0.55) 0px 7px 1px, rgba(0, 0, 0, 0.296875) 0px 8px 6px;
     text-shadow: 0px 3px 5px rgba(1, 1, 1, 0.24);
   }
-  h2{
+  h2 {
     font-size: 3.6em!important;
     font-weight: 900;
+    margin: 0;
+
   }
   h3 {
     margin: 0;
