--- a/resources/assets/sass/_leaderboard.scss
+++ b/resources/assets/sass/_leaderboard.scss
@@ -74,18 +74,20 @@ $progress-bar-bg-color: rgba(193, 163, 20, 0.8);
     -webkit-background-clip: text;
     text-shadow: #bbbbbb 0px 1px 0px, #b5b5b5 0px 2px 0px, #9c9b9b 0px 3px 0px, #888787 0px 4px 0px, #5d5c5c 0px 5px 0px, #3a3939 0px 6px 0px, rgba(0, 0, 0, 0.55) 0px 7px 1px, rgba(0, 0, 0, 0.296875) 0px 8px 6px;
     text-shadow: 0px 3px 5px rgba(1, 1, 1, 0.24);
+    text-shadow: 0px 3px 7px rgba(1,1,1,0.57);
   }
   h2 {
     font-size: 3.6em!important;
     font-weight: 900;
     margin: 0;
-
+    // font-size: 1.5em;
   }
   h3 {
     margin: 0;
     color: #cbb341;
     font-weight: 500;
     text-shadow: 0px 5px 7px rgba(1, 1, 1, 0.84);
+    font-size: 1.5em;
   }
   .pull-right {
     // margin-right: 80px;
@@ -112,10 +114,12 @@ $progress-bar-bg-color: rgba(193, 163, 20, 0.8);
       padding: 0 1px;
       line-height: 1.3;
       background-color: $progress-bar-bg-color;
-      // min-width: 10%;
+      min-width: 4%;
       font-size: .8em;
       color: #2a4a60;
       text-shadow: 0px 1px 1px rgba(32, 23, 104, 0.8);
+
+
 
       // this adds a white chevron sticking into the green pogress bar
       // &:after {
