--- a/resources/assets/sass/_leaderboard.scss
+++ b/resources/assets/sass/_leaderboard.scss
@@ -14,6 +14,7 @@ $progress-bar-bg-color: rgba(116, 188, 68, 0.75);
 $progress-bar-bg-color: rgba(193, 163, 20, 0.8);
 $progress-bar-bg-color: rgba(255, 211, 0, 0.8);
 $progress-bar-bg-color: rgb(249, 216, 54);
+// $progress-bar-bg-color: #e2c849;
 
 
 
@@ -63,7 +64,7 @@ $progress-label-color: #21aaf7;
     width: 100%;
     height: 0;
     border-left: 11px solid;
-    border-left-color: #f9d836;
+    border-left-color: $progress-bar-bg-color;
     border-top: 17px solid transparent;
     border-bottom: 15px solid transparent;
     border-radius: 3px;
