--- a/resources/assets/sass/_leaderboard.scss
+++ b/resources/assets/sass/_leaderboard.scss
@@ -21,6 +21,7 @@ $progress-bar-bg-color: rgb(249, 216, 54);
 $progress-label-color: #3097d1;
 $progress-label-color: #177eb8;
 $progress-label-color: #21aaf7;
+$progress-label-color: #d8e2e6;
 
 .blue-green-overlay:before {
   content: ' ';
@@ -129,8 +130,8 @@ $progress-label-color: #21aaf7;
       line-height: 1.3;
       background-color: $progress-bar-bg-color;
       font-size: .8em;
-      color: $progress-label-color - 25%;
-      text-shadow: 0px 1px 1px rgba(32, 23, 104, 0.8);
+      color: #426d26;
+      text-shadow: 0px 2px 3px rgba(32, 23, 104, 0.8);
       height: 30px;
 
       // this adds a white chevron sticking into the green pogress bar
