--- a/resources/assets/sass/_leaderboard.scss
+++ b/resources/assets/sass/_leaderboard.scss
@@ -73,7 +73,7 @@ $progress-label-color: #d8e2e6;
 }
 
 #leaderboard_title_bar {
-  padding-top: 4em;
+  padding-top: 2em;
   h2, h3 {
     // text-shadow: 0px 3px 3px rgba(0, 0, 0, 0.5) // replaced by 3d text effect below
     color: rgba(0, 20, 34, 0.62);
@@ -185,4 +185,57 @@ $progress-label-color: #d8e2e6;
   height: 1.4em;
   border-radius: 22px;
   box-shadow: 0px 4px 6px #555;
+}
+
+.month_label {
+  font-size: 4em!important;
+  font-weight: 900;
+  margin: 0;
+  color: #cbb341;
+  color: #2690f5;
+  color: #67a63e;
+  color: #d8e2e6;
+  color: #c40a88;
+  font-weight: 900;
+  font-weight: 500;
+  font-weight: 100;
+  text-shadow: 0px 5px 7px rgba(1, 1, 1, 0.64);
+  font-size: 2.5em;
+}
+
+.month_label_2 {
+  background-color: #726caa;
+  font-size: 2em!important;
+  font-weight: 900;
+  margin: 0;
+  color: #cbb341;
+  color: #2690f5;
+  color: #67a63e;
+  color: #c40a88;
+  color: #d8e2e6;
+  font-weight: 900;
+  font-weight: 500;
+  font-weight: 100;
+  text-shadow: 0px 5px 7px rgba(1, 1, 1, 0.64);
+  text-align: center;
+  padding: 5px
+}
+
+.my_day {
+  font-size: 6em!important;
+  text-align: center;
+  display: block;
+  box-shadow: 0px 4px 3px 0px rgba(51, 51, 51, 0.78);
+  color: #2269ad;
+  color: #c40a88;
+  color: #74bc44;
+  color: #d4dfe1  ;
+  background-color: #d4dfe1;
+  height: 180px;
+  position: relative;
+  top: -50px;
+  z-index: -1;
+  text-shadow: 0px 5px 7px #1e300a;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
 }
