added font awsome added functions to calculate old and new postions made changes to db structure

--- a/resources/assets/sass/_leaderboard.scss
+++ b/resources/assets/sass/_leaderboard.scss
@@ -239,3 +239,19 @@ $progress-label-color: #d8e2e6;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
 }
+
+.lower {
+
+}
+
+.higher {
+
+}
+
+.no_move {
+  
+}
+
+.init {
+
+}
