--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -8,3 +8,15 @@
 
 // Bootstrap
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+
+
+// @fa_path: "node_modules/font-awesome/scss";
+@import "node_modules/font-awesome/scss/_variables.scss";
+@import "node_modules/font-awesome/scss/_mixins.scss";
+@import "node_modules/font-awesome/scss/_path.scss";
+@import "node_modules/font-awesome/scss/_core.scss";
+@import "node_modules/font-awesome/scss/_icons.scss";
+
+i {
+background: none !important;
+}
