--- a/resources/assets/sass/_leaderboard.scss
+++ b/resources/assets/sass/_leaderboard.scss
@@ -187,59 +187,6 @@ $progress-label-color: #d8e2e6;
   box-shadow: 0px 4px 6px #555;
 }
 
-.month_label {
-  font-size: 4em!important;
-  font-weight: 900;
-  margin: 0;
-  color: #cbb341;
-  color: #2690f5;
-  color: #67a63e;
-  color: #d8e2e6;
-  color: #c40a88;
-  font-weight: 900;
-  font-weight: 500;
-  font-weight: 100;
-  text-shadow: 0px 5px 7px rgba(1, 1, 1, 0.64);
-  font-size: 2.5em;
-}
-
-.month_label_2 {
-  background-color: #726caa;
-  font-size: 2em!important;
-  font-weight: 900;
-  margin: 0;
-  color: #cbb341;
-  color: #2690f5;
-  color: #67a63e;
-  color: #c40a88;
-  color: #d8e2e6;
-  font-weight: 900;
-  font-weight: 500;
-  font-weight: 100;
-  text-shadow: 0px 5px 7px rgba(1, 1, 1, 0.64);
-  text-align: center;
-  padding: 5px
-}
-
-.my_day {
-  font-size: 6em!important;
-  text-align: center;
-  display: block;
-  box-shadow: 0px 4px 3px 0px rgba(51, 51, 51, 0.78);
-  color: #2269ad;
-  color: #c40a88;
-  color: #74bc44;
-  color: #d4dfe1  ;
-  background-color: #d4dfe1;
-  height: 180px;
-  position: relative;
-  top: -50px;
-  z-index: -1;
-  text-shadow: 0px 5px 7px #1e300a;
-  border-bottom-left-radius: 4px;
-  border-bottom-right-radius: 4px;
-}
-
 .lower {
   color: #c40a27;
 }
@@ -260,4 +207,48 @@ $progress-label-color: #d8e2e6;
   position: relative;
   top: 36px;
   right: 80px;
+}
+
+#my_calendar {
+  margin-top:70px;
+  margin-bottom: -190px;
+  padding: 0;
+  font-size: 1.3em!important;
+
+  &.month_label {
+    background-color: #726caa;
+    font-size: 2em!important;
+    font-weight: 900;
+    margin: 0;
+    color: #cbb341;
+    color: #2690f5;
+    color: #67a63e;
+    color: #c40a88;
+    color: #d8e2e6;
+    font-weight: 900;
+    font-weight: 500;
+    font-weight: 100;
+    text-shadow: 0px 5px 7px rgba(1, 1, 1, 0.64);
+    text-align: center;
+    padding: 5px
+  }
+
+  &.my_day {
+    font-size: 5em!important;
+    text-align: center;
+    display: block;
+    box-shadow: 0px 4px 3px 0px rgba(51, 51, 51, 0.78);
+    color: #2269ad;
+    color: #c40a88;
+    color: #74bc44;
+    color: #d4dfe1  ;
+    background-color: #d4dfe1;
+    height: 150px;
+    position: relative;
+    top: -30px;
+    z-index: -1;
+    text-shadow: 0px 5px 7px #1e300a;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+  }
 }
