--- a/resources/assets/sass/_leaderboard.scss
+++ b/resources/assets/sass/_leaderboard.scss
@@ -213,11 +213,11 @@ $progress-label-color: #d8e2e6;
   margin-top:70px;
   margin-bottom: -190px;
   padding: 0;
-  font-size: 1.3em!important;
+  width: 9.3%;
 
-  &.month_label {
+  .month_label {
     background-color: #726caa;
-    font-size: 2em!important;
+    font-size: 1.3em!important;
     font-weight: 900;
     margin: 0;
     color: #cbb341;
@@ -233,7 +233,7 @@ $progress-label-color: #d8e2e6;
     padding: 5px
   }
 
-  &.my_day {
+  .my_day {
     font-size: 5em!important;
     text-align: center;
     display: block;
@@ -243,9 +243,9 @@ $progress-label-color: #d8e2e6;
     color: #74bc44;
     color: #d4dfe1  ;
     background-color: #d4dfe1;
-    height: 150px;
+    height: 156px;
     position: relative;
-    top: -30px;
+    top: -20px;
     z-index: -1;
     text-shadow: 0px 5px 7px #1e300a;
     border-bottom-left-radius: 4px;
