--- a/resources/assets/sass/_leaderboard.scss
+++ b/resources/assets/sass/_leaderboard.scss
@@ -210,8 +210,8 @@ $progress-label-color: #d8e2e6;
 }
 
 #my_calendar {
-  margin-top: 50px;
-  margin-bottom: -140px;
+  margin-top:70px;
+  margin-bottom: -190px;
   padding: 0;
   width: 9.3%;
 
@@ -234,7 +234,7 @@ $progress-label-color: #d8e2e6;
   }
 
   .my_day {
-    font-size: 4em!important;
+    font-size: 5em!important;
     text-align: center;
     display: block;
     box-shadow: 0px 4px 3px 0px rgba(51, 51, 51, 0.78);
@@ -243,8 +243,9 @@ $progress-label-color: #d8e2e6;
     color: #74bc44;
     color: #d4dfe1  ;
     background-color: #d4dfe1;
-    height: 140px;
+    height: 156px;
     position: relative;
+    top: -20px;
     z-index: -1;
     text-shadow: 0px 5px 7px #1e300a;
     border-bottom-left-radius: 4px;
